[1week] 2단계 - 인수 테스트 구현 (#34)
* docs: system-analysis.md 작성

* docs: risk-matrix.md 작성

* fix: risk-matrix.md & system-analysis.md 오타 및 내용 수정

* fix: risk-matrix.md 수정

* docs: acceptance-criteria.md 작성

* docs: scenarios.feature 작성

* 2단계 과제 수행 전 소스 수정 및 추가

* 2단계 과제 수행